revise mongoDB database & add like/unlike/getFavList router
